<resources>
    <string name="app_name">Dr. Planner</string>
    <string name="title_home">Home</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_notes">Notes</string>
    <string name="title_todo_list">To-do</string>
    <string name="stub_time">00:00</string>
    <string name="stub_meridiem">AM</string>
</resources>
