<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_note_add_black_24dp"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/ic_access_alarm_black_24dp"
        android:title="@string/title_alarm" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/title_todo_list"/>


</menu>
